.tmp/backend_logs.txt
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/code/app/fast_api_app.py", line 532, in <module>
    from app.routers.initiatives import router as initiatives_router
  File "/code/app/routers/initiatives.py", line 256
    class CreateFromBraindumpRequest(BaseModel):
    ^^^^^
IndentationError: expected an indented block after function definition on line 241
INFO:     Will watch for changes in these directories: ['/code']
INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)
INFO:     Started reloader process [10] using StatReload
WARNING:app.config.validation:Optional environment variable 'SUPABASE_JWT_SECRET' is not set. Description: JWT secret for token verification (CRITICAL for production security)
WARNING:app.config.validation:Optional environment variable 'GOOGLE_API_KEY' is not set. Description: Google AI API key (alternative to Vertex AI)
WARNING:app.config.validation:Optional environment variable 'SUPABASE_DB_PASSWORD' is not set. Description: Supabase database password for direct connections
WARNING:app.config.validation:Optional environment variable 'REDIS_PASSWORD' is not set. Description: Redis authentication password
WARNING:app.config.validation:Optional environment variable 'APP_URL' is not set. Description: Public URL of the application
WARNING:app.config.validation:Optional environment variable 'ALLOWED_ORIGINS' is not set. Description: Comma-separated CORS allowed origins
WARNING:app.config.validation:Optional environment variable 'WORKFLOW_ALLOW_FALLBACK_SIMULATION' is not set. Description: Allow simulated edge fallback for workflow execution (must be false in production)
WARNING:app.config.validation:SUPABASE_JWT_SECRET is not set in development environment. JWT verification will be skipped. This is acceptable for development but MUST be set in production.
WARNING:app.rag.embedding_service:GOOGLE_API_KEY not set. Embeddings will fallback to zeros.
/code/app/agent.py:262: UserWarning: [EXPERIMENTAL] ContextCacheConfig: This feature is experimental and may change or be removed in future versions without notice. It may introduce breaking changes at any time.
  context_cache_config=ContextCacheConfig(
/code/app/agent.py:267: UserWarning: [EXPERIMENTAL] EventsCompactionConfig: This feature is experimental and may change or be removed in future versions without notice. It may introduce breaking changes at any time.
  events_compaction_config=EventsCompactionConfig(
/code/app/agent.py:277: UserWarning: [EXPERIMENTAL] EventsCompactionConfig: This feature is experimental and may change or be removed in future versions without notice. It may introduce breaking changes at any time.
  events_compaction_config=EventsCompactionConfig(
/code/app/fast_api_app.py:228: UserWarning: [EXPERIMENTAL] A2aAgentExecutor: ADK Implementation for A2A support (A2aAgentExecutor, RemoteA2aAgent and corresponding supporting components etc.) is in experimental mode and is subjected to breaking changes. A2A protocol and SDK arethemselves not experimental. Once it's stable enough the experimental mode will be removed. Your feedback is welcome.
  agent_executor=A2aAgentExecutor(runner=runner),
/code/.venv/lib/python3.11/site-packages/google/adk/a2a/executor/a2a_agent_executor.py:101: UserWarning: [EXPERIMENTAL] A2aAgentExecutorConfig: ADK Implementation for A2A support (A2aAgentExecutor, RemoteA2aAgent and corresponding supporting components etc.) is in experimental mode and is subjected to breaking changes. A2A protocol and SDK arethemselves not experimental. Once it's stable enough the experimental mode will be removed. Your feedback is welcome.
  self._config = config or A2aAgentExecutorConfig()
Process SpawnProcess-1:
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/multiprocessing/process.py", line 314, in _bootstrap
    self.run()
  File "/usr/local/lib/python3.11/multiprocessing/process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "/code/.venv/lib/python3.11/site-packages/uvicorn/_subprocess.py", line 80, in subprocess_started
    target(sockets=sockets)
  File "/code/.venv/lib/python3.11/site-packages/uvicorn/server.py", line 66, in run
    return asyncio.run(self.serve(sockets=sockets))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/asyncio/runners.py", line 190, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/asyncio/base_events.py", line 654, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "/code/.venv/lib/python3.11/site-packages/uvicorn/server.py", line 70, in serve
    await self._serve(sockets)
  File "/code/.venv/lib/python3.11/site-packages/uvicorn/server.py", line 77, in _serve
    config.load()
  File "/code/.venv/lib/python3.11/site-packages/uvicorn/config.py", line 435, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/code/.venv/lib/python3.11/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/code/app/fast_api_app.py", line 532, in <module>
    from app.routers.initiatives import router as initiatives_router
  File "/code/app/routers/initiatives.py", line 256
    class CreateFromBraindumpRequest(BaseModel):
    ^^^^^
IndentationError: expected an indented block after function definition on line 241
